Sets up mobile layout

--- a/index.html
+++ b/index.html
@@ -2,12 +2,54 @@
 <html>
   <head>
     <title>Lab 01</title>
-    <link rel="stylesheet" href="styles.reset/css">
-    <link rel="stylesheet" href="styles.base/css">
-    <link rel="stylesheet" href="styles.layout/css">
-    <link rel="stylesheet" href="styles.modules/css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/modules.css">
   </head>
   <body>
+    <header>
+      <p>a</p>
+    </header>
+
+    <nav>
+      <p>b</p>
+    </nav>
+
+    <section class="section1">
+      <div>
+          <p>c</p>
+      </div>
+
+      <div>
+          <p>d</p>
+      </div>
+
+    </section>
+
+    <section class="section2">
+
+      <div>
+        <p>e</p>
+      </div>
+
+      <div>
+        <p>f</p>
+      </div>
+
+      <div>
+        <p>g</p>
+      </div>
+
+      <div>
+        <p>h</p>
+      </div>
+
+    </section>
     
+    <footer>
+      <p>i</p>
+    </footer>
+
   </body>
 </html>
