Adds desktop view, adds some color

--- a/index.html
+++ b/index.html
@@ -8,48 +8,30 @@
     <link rel="stylesheet" href="styles/modules.css">
   </head>
   <body>
-    <header>
-      <p>a</p>
-    </header>
+    <header>a</header>
 
-    <nav>
-      <p>b</p>
-    </nav>
+    <nav>b</nav>
 
     <section class="section1">
-      <div>
-          <p>c</p>
-      </div>
+      <div>c</div>
 
-      <div>
-          <p>d</p>
-      </div>
+      <div>d</div>
 
     </section>
 
     <section class="section2">
 
-      <div>
-        <p>e</p>
-      </div>
+      <div>e</div>
 
-      <div>
-        <p>f</p>
-      </div>
+      <div>f</div>
 
-      <div>
-        <p>g</p>
-      </div>
+      <div>g</div>
 
-      <div>
-        <p>h</p>
-      </div>
+      <div>h</div>
 
     </section>
     
-    <footer>
-      <p>i</p>
-    </footer>
+    <footer>i</footer>
 
   </body>
 </html>
