Adds new colors to blocks

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav>b</nav>
 
     <section class="section1">
-      <div>c</div>
+      <div id="c">c</div>
 
-      <div>d</div>
+      <div id="d">d</div>
 
     </section>
 
