--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE = html>
 <html>
-  <head>
-    <title>Lab 01</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/layout.css">
-    <link rel="stylesheet" href="styles/modules.css">
-  </head>
-  <body>
-    <header>a</header>
 
-    <nav>b</nav>
+<head>
+  <title>Lab 01</title>
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/modules.css">
+</head>
 
+<body>
+  <header>a</header>
+
+  <nav>b</nav>
+
+  <span>
     <section class="section1">
       <div id="c">c</div>
 
@@ -30,8 +33,10 @@
       <div>h</div>
 
     </section>
-    
-    <footer>i</footer>
 
-  </body>
+    <footer>i</footer>
+  </span>
+
+</body>
+
 </html>
